--- a/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj
+++ b/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj
@@ -159,6 +159,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="036_Valid_Sudoku_test.cpp" />
+    <ClCompile Include="050_Pow_test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
