--- a/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj.filters
+++ b/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="036_Valid_Sudoku_test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="050_Pow_test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
