--- a/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj
+++ b/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj
@@ -113,6 +113,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalDependencies>Exercises.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\zhc\Source\Repos\LeetCodeExercises\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -152,6 +153,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="029Test.cpp" />
+    <ClCompile Include="037_Solve_Sudoku_test.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
