--- a/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj.filters
+++ b/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClCompile Include="050_Pow_test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="037_Solve_Sudoku_test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="029Test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
