--- a/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj.filters
+++ b/UnitTest/036_Valid_Sudoku_UnitTest.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClCompile Include="029Test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="039test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="042_Trapping Rain Water_test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
